--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,203 +7,287 @@
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="594dp"
-        android:layout_height="288dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="479dp"
+        android:layout_height="482dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnMC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/mc"
+            android:textSize="30sp"
             app:layout_column="0"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnMMas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/mmas"
+            android:textSize="30sp"
             app:layout_column="1"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnMMenos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/mmenos"
+            android:textSize="30sp"
             app:layout_column="2"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnMR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/mr"
+            android:textSize="30sp"
             app:layout_column="3"
             app:layout_row="0" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/c"
+            android:textSize="30sp"
             app:layout_column="0"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnMasMenos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/masmenos"
+            android:textSize="30sp"
             app:layout_column="1"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/btnDiv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/div"
+            android:textSize="30sp"
             app:layout_column="2"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/btnMul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/mul"
+            android:textSize="30sp"
             app:layout_column="3"
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/btn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n7"
+            android:textSize="30sp"
             app:layout_column="0"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button10"
+            android:id="@+id/btn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n8"
+            android:textSize="30sp"
             app:layout_column="1"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button11"
+            android:id="@+id/btn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n9"
+            android:textSize="30sp"
             app:layout_column="2"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button12"
+            android:id="@+id/btnMenos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/restar"
+            android:textSize="30sp"
             app:layout_column="3"
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/button13"
+            android:id="@+id/btn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n4"
+            android:textSize="30sp"
             app:layout_column="0"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/button14"
+            android:id="@+id/btn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n5"
+            android:textSize="30sp"
             app:layout_column="1"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/button15"
+            android:id="@+id/btn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n6"
+            android:textSize="30sp"
             app:layout_column="2"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/button16"
+            android:id="@+id/btnSumar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/sumar"
+            android:textSize="30sp"
             app:layout_column="3"
             app:layout_row="3" />
 
         <Button
-            android:id="@+id/button17"
+            android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n1"
+            android:textSize="30sp"
             app:layout_column="0"
             app:layout_row="4" />
 
         <Button
-            android:id="@+id/button18"
+            android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n2"
+            android:textSize="30sp"
             app:layout_column="1"
             app:layout_row="4" />
 
         <Button
-            android:id="@+id/button19"
+            android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n3"
+            android:textSize="30sp"
             app:layout_column="2"
             app:layout_row="4" />
 
         <Button
-            android:id="@+id/button20"
+            android:id="@+id/btnIgual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/igual"
+            android:textSize="30sp"
             app:layout_column="3"
             app:layout_gravity="fill_vertical"
             app:layout_row="4"
             app:layout_rowSpan="2" />
 
         <Button
-            android:id="@+id/button21"
+            android:id="@+id/btn0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/n0"
+            android:textSize="30sp"
             app:layout_column="0"
             app:layout_columnSpan="2"
             app:layout_gravity="fill_horizontal"
@@ -213,28 +297,31 @@
             android:id="@+id/button22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:insetLeft="6dp"
-            android:text="Button"
+            android:width="120dp"
+            android:height="80dp"
+            android:insetLeft="3dp"
+            android:insetRight="3dp"
+            android:text="@string/coma"
+            android:textSize="30sp"
             app:layout_column="2"
             app:layout_row="5" />
     </androidx.gridlayout.widget.GridLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="599dp"
-        android:layout_height="213dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="479dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="10dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/lblCalculadora"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
