--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="379dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <TextView
+                android:id="@+id/lblOperacion"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:width="379dp"
+                android:gravity="center_vertical|end"
+                android:paddingStart="0sp"
+                android:paddingEnd="40sp"
+                android:singleLine="true"
+                android:textSize="50sp"
+                android:textStyle="bold" />
+        </HorizontalScrollView>
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
+
+            <TextView
+                android:id="@+id/lblResultado"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:width="379dp"
+                android:gravity="center_vertical|end"
+                android:paddingStart="0sp"
+                android:paddingEnd="40sp"
+                android:singleLine="true"
+                android:text="@string/resultado"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+        </HorizontalScrollView>
+
+    </LinearLayout>
+
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="479dp"
-        android:layout_height="482dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="379dp"
+        android:layout_height="427dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
@@ -21,8 +70,8 @@
             android:id="@+id/btnMC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/mc"
@@ -34,8 +83,8 @@
             android:id="@+id/btnMMas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/mmas"
@@ -47,8 +96,8 @@
             android:id="@+id/btnMMenos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/mmenos"
@@ -60,8 +109,8 @@
             android:id="@+id/btnMR"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/mr"
@@ -73,8 +122,8 @@
             android:id="@+id/btnC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/c"
@@ -83,14 +132,14 @@
             app:layout_row="1" />
 
         <Button
-            android:id="@+id/btnMasMenos"
+            android:id="@+id/btnPorcentaje"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
-            android:text="@string/masmenos"
+            android:text="@string/porcentaje"
             android:textSize="30sp"
             app:layout_column="1"
             app:layout_row="1" />
@@ -99,8 +148,8 @@
             android:id="@+id/btnDiv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/div"
@@ -112,8 +161,8 @@
             android:id="@+id/btnMul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/mul"
@@ -125,8 +174,8 @@
             android:id="@+id/btn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n7"
@@ -138,8 +187,8 @@
             android:id="@+id/btn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n8"
@@ -151,8 +200,8 @@
             android:id="@+id/btn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n9"
@@ -161,11 +210,11 @@
             app:layout_row="2" />
 
         <Button
-            android:id="@+id/btnMenos"
+            android:id="@+id/btnRestar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/restar"
@@ -177,8 +226,8 @@
             android:id="@+id/btn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n4"
@@ -190,8 +239,8 @@
             android:id="@+id/btn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n5"
@@ -203,8 +252,8 @@
             android:id="@+id/btn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n6"
@@ -216,8 +265,8 @@
             android:id="@+id/btnSumar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/sumar"
@@ -229,8 +278,8 @@
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n1"
@@ -242,8 +291,8 @@
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n2"
@@ -255,8 +304,8 @@
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n3"
@@ -268,8 +317,8 @@
             android:id="@+id/btnIgual"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/igual"
@@ -283,8 +332,8 @@
             android:id="@+id/btn0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/n0"
@@ -292,14 +341,15 @@
             app:layout_column="0"
             app:layout_columnSpan="2"
             app:layout_gravity="fill_horizontal"
-            app:layout_row="5" />
+            app:layout_row="5"
+            tools:ignore="DuplicateSpeakableTextCheck" />
 
         <Button
-            android:id="@+id/button22"
+            android:id="@+id/btnComa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:width="120dp"
-            android:height="80dp"
+            android:width="95dp"
+            android:height="71dp"
             android:insetLeft="3dp"
             android:insetRight="3dp"
             android:text="@string/coma"
@@ -308,21 +358,4 @@
             app:layout_row="5" />
     </androidx.gridlayout.widget.GridLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="479dp"
-        android:layout_height="400dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="10dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/lblCalculadora"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
