--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="379dp"
-        android:layout_height="200dp"
+        android:layout_height="300dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -20,13 +20,14 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="157dp">
 
             <TextView
                 android:id="@+id/lblOperacion"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:width="379dp"
+                android:height="150dp"
                 android:gravity="center_vertical|end"
                 android:paddingStart="0sp"
                 android:paddingEnd="40sp"
@@ -37,13 +38,14 @@
 
         <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="143dp">
 
             <TextView
                 android:id="@+id/lblResultado"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:width="379dp"
+                android:height="150dp"
                 android:gravity="center_vertical|end"
                 android:paddingStart="0sp"
                 android:paddingEnd="40sp"
@@ -60,11 +62,11 @@
         android:layout_width="379dp"
         android:layout_height="427dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="13dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="78dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btnMC"
